[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "yellowstone-strategy"
version = "0.1.0"
description = "Strategy research tools for the Yellowstone Park board game."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
rl = [
    "gymnasium>=1.0",
    "numpy>=2.0",
    "stable-baselines3>=2.0",
    "sb3-contrib>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
